--- a/pkg/admin/gui/front-end/html/typeCredential.html
+++ b/pkg/admin/gui/front-end/html/typeCredential.html
@@ -1,6 +1,6 @@
 {{ define "addTextType" }}
 <div id="addTextType" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
@@ -13,7 +13,7 @@
 
 {{ define "editTextType" }}
 <div id="editTextType_{{ .ID }}" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
@@ -26,7 +26,7 @@
 
 {{ define "addFileType" }}
 <div id="addFileType" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "selectYourFile" }} :</label>
         <input type="file" name="addCredentialFile" class="form-control">
@@ -37,7 +37,7 @@
 
 {{ define "editFileType" }}
 <div id="editFileType_{{ .ID }}" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "selectYourFile" }} :</label>
         <input type="file" name="editCredentialFile" class="form-control">
@@ -48,12 +48,12 @@
 
 {{ define "addTwoFileType" }}
 <div id="addTwoFileType" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "selectYourTlsCertificate" }} :</label>
         <input type="file" name="addCredentialFile1" class="form-control">
         <input type="hidden" id="addCredentialValueFile1" name="addCredentialValueFile1">
-        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <hr style="border-top: 1px solid #ababab;">
         <label class="col-form-label">{{ index .tab "selectYourPrivateKey" }} :</label>
         <input type="file" name="addCredentialFile2" class="form-control">
         <input type="hidden" id="addCredentialValueFile2" name="addCredentialValueFile2">
@@ -63,12 +63,12 @@
 
 {{ define "editTwoFileType" }}
 <div id="editTwoFileType_{{ .ID }}" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "selectYourTlsCertificate" }} :</label>
         <input type="file" name="editCredentialFile1" class="form-control">
         <input type="hidden" id="editCredentialValueFile1" name="editCredentialValueFile1">
-        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <hr style="border-top: 1px solid #ababab;">
         <label class="col-form-label">{{ index .tab "selectYourPrivateKey" }} :</label>
         <input type="file" name="editCredentialFile2" class="form-control">
         <input type="hidden" id="editCredentialValueFile2" name="editCredentialValueFile2">
@@ -78,11 +78,11 @@
 
 {{ define "addLoginAndPwdType" }}
 <div id="addLoginAndPwdType" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "login" }} :</label>
         <input type="text" id="addCredentialValue1" name="addCredentialValue1" class="form-control">
-        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <hr style="border-top: 1px solid #ababab;">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
             <input type="password" id="addCredentialValue2" name="addCredentialValue2" class="form-control">
@@ -94,11 +94,11 @@
 
 {{ define "editLoginAndPwdType" }}
 <div id="editLoginAndPwdType_{{ .ID }}" class="CredentialBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "login" }} :</label>
         <input type="text" id="editCredentialValue1" name="editCredentialValue1" class="form-control">
-        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <hr style="border-top: 1px solid #ababab;">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
             <input type="password" id="editCredentialValue2" name="editCredentialValue2" class="form-control">
