--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -22,7 +22,7 @@
           <i class="bi bi-arrow-left"></i>
         </button>
       </div>
-    <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
 
     {{ if contains .myPermission.Partners "w" }}
         <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addPartnerModal">
@@ -42,7 +42,7 @@
                   <label class="col-form-label">{{ index .tab "nameStr" }} :</label>
                   <input type="text" name="addPartnerName" class="form-control" required>
               </div>
-              <hr class="mt-2" style="border-top: 1px solid #ababab;">
+              <hr style="border-top: 1px solid #ababab;">
               <div class="form-input">
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                 <select name="addPartnerProtocol" id="addPartnerProtocol" class="form-select protocolConfiguration-select" required>
@@ -58,12 +58,12 @@
                   <option value="pesit-tls">PeSIT-TLS</option>
                 </select>
               </div>
-              <hr class="mt-2" style="border-top: 1px solid #ababab;">
+              <hr style="border-top: 1px solid #ababab;">
               <div class="form-input">
                   <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                   <input type="text" name="addPartnerHost" class="form-control" required>
               </div>
-              <hr class="mt-2" style="border-top: 1px solid #ababab;">
+              <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                   <input type="text" name="addPartnerPort" class="form-control" required>
@@ -240,12 +240,12 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                      <div class="form-group">
+                      <div class="form-input">
                           <label class="col-form-label">{{ index $.tab "nameStr" }} :</label>
                           <input type="text" name="editPartnerName" class="form-control" required value="{{ .Name }}">
                       </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                      <div class="form-group mt-4">
+                      <hr style="border-top: 1px solid #ababab;">
+                      <div class="form-input mt-4">
                         <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                         <select name="editPartnerProtocol" class="form-select protocolConfiguration-select" required>
                           <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
@@ -259,13 +259,13 @@
                           <option value="pesit-tls" {{ if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
                         </select>
                       </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                      <div class="form-group mt-4">
+                      <hr style="border-top: 1px solid #ababab;">
+                      <div class="form-input mt-4">
                           <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                           <input type="text" name="editPartnerHost" class="form-control" required value="{{ .Address.Host }}">
                       </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                      <div class="form-group mt-4">
+                      <hr style="border-top: 1px solid #ababab;">
+                      <div class="form-input mt-4">
                           <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                           <input type="text" name="editPartnerPort" class="form-control" required value="{{ .Address.Port }}">
                       </div>
