--- a/pkg/admin/gui/front-end/html/server_management_page.html
+++ b/pkg/admin/gui/front-end/html/server_management_page.html
@@ -22,7 +22,7 @@
       <i class="bi bi-arrow-left"></i>
     </button>
   </div>
-  <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+  <hr style="border-top: 1px solid #ababab;">
 
     {{ if contains .myPermission.Servers "w" }}
     <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addServerModal">
@@ -42,7 +42,7 @@
                 <label class="col-form-label">{{ index .tab "servers" }} :</label>
                 <input type="text" name="addServerName" class="form-control" required>
                 </div>
-                <hr class="mt-2" style="border-top: 1px solid #ababab;">
+                <hr style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
@@ -59,32 +59,35 @@
                     <option value="pesit-tls">PeSIT-TLS</option>
                 </select>
                 </div>
-                <hr class="mt-2" style="border-top: 1px solid #ababab;">
+                <hr style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                 <input type="text" name="addServerHost" class="form-control" required>
                 </div>
-                <hr class="mt-2" style="border-top: 1px solid #ababab;">
+                <hr style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                 <input type="text" name="addServerPort" class="form-control" required>
                 </div>
-                <hr class="mt-2" style="border-top: 1px solid #ababab;">
+                <hr style="border-top: 1px solid #ababab;">
 
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "rootDir" }} :</label>
                 <input type="text" name="addServerRootDir" class="form-control" required>
                 </div>
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "receiveDir" }} :</label>
                 <input type="text" name="addServerReceiveDir" class="form-control" required>
                 </div>
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "sendDir" }} :</label>
                 <input type="text" name="addServerSendDir" class="form-control" required>
                 </div>
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "tmpReceiveDir" }} :</label>
                 <input type="text" name="addServerTmpReceiveDir" class="form-control" required>
@@ -223,17 +226,17 @@
                         <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .RootDir }}" readonly>
                       </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+                      <hr style="border-top: 1px solid #ababab;">
                       <div class="form-input mb-2">
                         <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .ReceiveDir }}" readonly>
                       </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+                      <hr style="border-top: 1px solid #ababab;">
                       <div class="form-input mb-2">
                         <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .SendDir }}" readonly>
                       </div>
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+                      <hr style="border-top: 1px solid #ababab;">
                       <div class="form-input mb-2">
                         <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
                         <input type="text" class="form-control-plaintext" value="{{ .TmpReceiveDir }}" readonly>
@@ -301,12 +304,12 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <div class="form-group">
+                            <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "servers" }} :</label>
                             <input type="text" name="editServerName" class="form-control" required value="{{ .Name }}">
                             </div>
-                            <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                             <select name="editServerProtocol" class="form-select protocolConfiguration-select" required>
                                 <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
@@ -320,29 +323,33 @@
                                 <option value="pesit-tls" {{ if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
                             </select>
                             </div>
-                            <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
                             <input type="text" name="editServerHost" class="form-control" required value="{{ .Address.Host }}">
                             </div>
-                            <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                             <input type="text" name="editServerPort" class="form-control" required value="{{ .Address.Port }}">
                             </div>
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
                             <input type="text" name="editServerRootDir" class="form-control" required value="{{ .RootDir }}">
                             </div>
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
                             <input type="text" name="editServerReceiveDir" class="form-control" required value="{{ .ReceiveDir }}">
                             </div>
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
                             <input type="text" name="editServerSendDir" class="form-control" required value="{{ .SendDir }}">
                             </div>
-                            <div class="form-group mt-4">
+                            <hr style="border-top: 1px solid #ababab;">
+                            <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
                             <input type="text" name="editServerTmpReceiveDir" class="form-control" required value="{{ .TmpReceiveDir }}">
                             </div>
