--- a/pkg/admin/gui/front-end/html/user_management_page.html
+++ b/pkg/admin/gui/front-end/html/user_management_page.html
@@ -24,7 +24,7 @@
           <i class="bi bi-arrow-left"></i>
         </button>
       </div>
-    <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+    <hr style="border-top: 1px solid #ababab;">
     
     {{ if contains .myPermission.Users "w" }}
         <button class="btn btn-primary mb-3 btn-add" type="button" data-bs-toggle="modal" data-bs-target="#addUserModal">
@@ -43,6 +43,7 @@
                     <label class="col-form-label">{{ index .tab "usernameStr" }} :</label>
                     <input type="text" name="newUserUsername" class="form-control" required>
                 </div>
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label mt-2">{{ index .tab "passwordStr" }} :</label>
                     <div class="input-group">
@@ -50,6 +51,7 @@
                         <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('newUserPassword_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
                     </div>
                 </div>
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label mt-2">{{ index .tab "passwordConfirmStr" }} :</label>
                     <div class="input-group">
@@ -57,6 +59,7 @@
                         <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('newUserPasswordConfirm_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
                     </div>
                 </div>
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="mt-3 mb-3"><strong>{{ index .tab "permissions" }} :</strong></div>
                 <div class="form-group mt-2">
                 <label class="col-form-label">{{ index .tab "transfers" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipTransfers" }}"></i> :</label>
@@ -272,6 +275,7 @@
                                 <label class="col-form-label">{{ index $.tab "usernameStr" }} :</label>
                                 <input type="text" name="editUserUsername" class="form-control" required value="{{ .Username }}">
                             </div>
+                            <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label mt-2">{{ index $.tab "passwordStr" }} :</label>
                                 <div class="input-group">
@@ -279,6 +283,7 @@
                                     <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editUserPassword_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
                                 </div>
                             </div>
+                            <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label mt-2">{{ index $.tab "passwordConfirmStr" }} :</label>
                                 <div class="input-group">
@@ -286,6 +291,7 @@
                                     <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editUserPasswordConfirm_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
                                 </div>
                             </div>
+                            <hr style="border-top: 1px solid #ababab;">
                             <div class="title-perm mt-3 mb-3"><strong>{{ index $.tab "permissions" }} :</strong></div>
                                 <div class="form-group mt-2">
                                     <label class="col-form-label">{{ index $.tab "transfers" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTransfers" }}"></i> :</label>
